feat: migrate from JavaFX to Compose Desktop and implement week view
Major Changes:
- Add Compose plugin to build.gradle.kts for Kotlin 2.0.21 compatibility
- Remove all JavaFX-related code (MainApp, controllers, UI components)
- Delete JavaFX tests and utilities
- Update repositories (add Google Maven and Compose dev repo)

New Features:
- Implement week view with Compose Desktop (WeekViewScreen.kt)
- Add EventModels.kt for UI data models and week range helpers
- Add EventServiceBridge.kt for Kotlin-Java interop with Coroutines
- Week navigation (previous/next/today)
- Event CRUD operations (create, edit, delete)
- Material 3 Design with dark theme
- Vertical scrolling with scrollbar

Documentation:
- Update AGENT.md to reflect Compose Desktop architecture
- Update README.md with Compose-specific instructions
- Add WEEKVIEW.md with detailed implementation documentation
- Add logs/ to .gitignore

Technical Details:
- UI: Jetpack Compose Desktop + Material 3
- Language: Kotlin 2.0.21 for UI, Java 21 for data layer
- Async: Kotlin Coroutines with Dispatchers.IO
- Architecture: Compose UI → Kotlin Bridge → Java Service/DAO → SQLite

Stats: +754 insertions, -1777 deletions (521 lines of new Kotlin code)